TIM-6: Added CRUD Services and Unit tests for Degree and some code enhancements